--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ hr {
 /* footer */
 
 footer {
-    height 150px;
+    height: 150px;
 }
 
 .social-networks {
@@ -326,5 +326,17 @@ footer {
     .right-about-heading p {
         text-align: center;
         padding: 0 20px;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+/* For small screen sizes 800px and down */
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
     }
 }
